[gd_scene load_steps=6 format=2]

[ext_resource path="res://plants/plant.gd" type="Script" id=1]
[ext_resource path="res://plants/sprites/support.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40, 40 )

[sub_resource type="CircleShape2D" id=2]
radius = 160.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 40, 40 )

[node name="plant" type="StaticBody2D" groups=[
"affected_by_weapons",
"attacked_by_enemies",
]]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="score_timer" type="Timer" parent="."]
autostart = true

[node name="attack_timer" type="Timer" parent="."]

[node name="teleport" type="TouchScreenButton" parent="." groups=[
"affected_by_weapons",
"attacked_by_enemies",
]]
shape = SubResource( 3 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="score_timer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="attack_timer" to="." method="_on_attack_timer_timeout"]
[connection signal="released" from="teleport" to="." method="_on_teleport_released"]
